--- a/test/fixtures/sequences.yml
+++ b/test/fixtures/sequences.yml
@@ -23,7 +23,6 @@
 #  company_id       :integer          not null
 #  created_at       :datetime         not null
 #  creator_id       :integer          
-#  format           :string(255)      not null
 #  id               :integer          not null, primary key
 #  last_cweek       :integer          
 #  last_month       :integer          
@@ -31,6 +30,7 @@
 #  last_year        :integer          
 #  lock_version     :integer          default(0), not null
 #  name             :string(255)      not null
+#  number_format    :string(255)      not null
 #  number_increment :integer          default(1), not null
 #  number_start     :integer          default(1), not null
 #  period           :string(255)      default("number"), not null
@@ -44,9 +44,9 @@
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
-#   format: "Lorem ipsum"
 #   id: 1
 #   name: "Lorem ipsum"
+#   number_format: "Lorem ipsum"
 #   number_increment: 0
 #   number_start: 0
 #   period: "Lorem ipsum"
@@ -57,7 +57,7 @@ sequences_001:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  format: "Lorem ipsum"
+  number_format: "Lorem ipsum"
   id: 1
   name: "Lorem ipsum"
   number_increment: 1
@@ -71,7 +71,7 @@ sequences_002:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  format: "Lorem ipsum"
+  number_format: "Lorem ipsum"
   id: 2
   name: "Lorem ipsum"
   number_increment: 1
