--- a/test/fixtures/sequences.yml
+++ b/test/fixtures/sequences.yml
@@ -55,12 +55,13 @@
 sequences_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  number_format: "Lorem ipsum"
+  number_format: "[number|12]"
   id: 1
-  name: "Lorem ipsum"
+  name: "Sales"
   number_increment: 1
   number_start: 1
-  period: "Lorem ipsum"
+  period: "number"
+  usage: "sales"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -68,12 +69,12 @@ sequences_001:
 sequences_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  number_format: "Lorem ipsum"
+  number_format: "[number|8]"
   id: 2
   name: "Lorem ipsum"
   number_increment: 1
   number_start: 1
-  period: "Lorem ipsum"
+  period: "number"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
