--- a/test/fixtures/animal_drugs.yml
+++ b/test/fixtures/animal_drugs.yml
@@ -47,6 +47,7 @@ animal_drug_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
+  nature_id: 1
   name: "SYNULOX"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
